# CModelEditor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
GLFWExample/: CMakeLists.txt  main.cpp
QTExample/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  SceneWindow.cpp  SceneWindow.h  main.cpp
include/: CFileSystem.h  FileSystem.h  pch.h
include/QT/: SceneWindow.h
include/Scene/: Camera.h  Scene.h
resources/shaders/: ModelVS.glsl
scripts/: bgfxCMakeLists.txt  bimgCMakeLists.txt  bxCMakeLists.txt
src/: CFileSystem.cpp  CMakeLists.txt  FileSystem.cpp
src/GLFW/: CMakeLists.txt
src/QT/: CMakeLists.txt  MainWindow.cpp  SceneWindow.cpp  main.cpp
